<resources>
    <string name="app_name">Cycle Buddy</string>

    <!-- activity headings -->
    <string name="cycle_buddy">Cycle Buddy</string>
    <string name="cycle_buddy_blurb">Building cycling confidence with buddies</string>
    <string name="messages">Messages</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="roboto_regular">RobotoRegular.ttf</string>

    <!-- shared preference strings -->
    <string name="preference_user_ID">preference User ID</string>

    <!-- navigation titles -->
    <string name="title_ride">Ride</string>
    <string name="title_search">Search</string>
    <string name="title_offer">Offer</string>
    <string name="title_messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search For Rides</string>
    <string name="offer">Offer A Ride</string>
    <string name="searchsplash">Good luck on your journey!</string>
    <string name="offersplash">Thanks for offering to be a buddy!</string>

    <!-- authentication strings -->
    <string name="signed_in">Signed in!</string>
    <string name="sign_in_cancelled">Sign in cancelled.</string>
    <string name="unsuccessful">Unsuccessful</string>

    <!-- profile strings -->
    <string name="userID" translatable="false">userID</string>
    <string name="user" translatable="false">user</string>
    <string name="buddyType" translatable="false">buddyType</string>
    <string name="yearsCycling" translatable="false">yearsCycling</string>
    <string name="cyclingFrequency" translatable="false">cyclingFrequency</string>
    <string name="miniBio" translatable="false">miniBio</string>
    <string name="photoUrl" translatable="false">photoUrl</string>
    <string name="name">User name</string>
    <string name="save_button">Save</string>
    <string name="message_button">Send Message</string>
    <string name="mini_bio">Mini bio:</string>
    <string name="buddy_type">Are you a buddy, or in need of a buddy?</string>
    <string name="be_a_buddy">Be a buddy</string>
    <string name="need_a_buddy">Need a buddy</string>
    <string name="both">Both</string>
    <string name="how_long_cycling">How long have you been cycling in London?</string>
    <string name="never">Never cycled in London</string>
    <string name="less_than_year">Less than a year</string>
    <string name="few_years">A few years</string>
    <string name="year_or_so">A year or so</string>
    <string name="very_long">As long as I can remember</string>
    <string name="how_often_cycling">How often do you cycle?</string>
    <string name="once_month">Once a month</string>
    <string name="choose_spinner">Please choose</string>
    <string name="seldom_cycle">Seldom</string>
    <string name="once_week">Once a week</string>
    <string name="several_days">Several days a week</string>
    <string name="everyday">Everyday</string>
    <string name="none_selected">None selected</string>
    <string name="unsaved_changes_message">Leave without saving changes?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue editing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded   </string>
    <string name="failed">Failed </string>
    <string name="edit_profile_cd">Add profile picture</string>
    <string name="view_profile_cd">View profile picture</string>
    <string name="username">Username:</string>
    <string name="mini_bio_blurb">Tell us a little something about yourself</string>
    <string name="vp_want_cycle_buddy"> ✓   I would like to be a Cycle Buddy</string>
    <string name="vp_need_cycle_buddy"> ✓   I would like to find a Cycle Buddy</string>
    <string name="vp_both_want_need"> ✓   I would like to both be and find a Cycle Buddy</string>
    <string name="vp_never_cycled_in_london"> ✓   I\'ve never cycled in London before</string>
    <string name="vp_cycling_less_than_year"> ✓   I\'ve been cycling in London for less than a year</string>
    <string name="vp_cycling_year_or_so"> ✓   I\'ve been cycling in London for a year or so</string>
    <string name="vp_cycling_few_years"> ✓   I\'ve been cycling in London for a few years now</string>
    <string name="vp_cycling_long_time"> ✓   I\'ve been cycling in London for as long as I can remember</string>
    <string name="vp_everyday"> ✓   I cycle nearly everyday</string>
    <string name="vp_several_days"> ✓   I cycle several days a week</string>
    <string name="vp_once_week"> ✓   I cycle about once a week</string>
    <string name="vp_once_month"> ✓   I cycle about once a month</string>
    <string name="vp_seldom_cycle"> ✓   I seldom cycle</string>
    <string name="select_picture">Select Picture</string>

    <!-- search fragments strings -->
    <string name="search_results">Search Results</string>
    <string name="ok">OK</string>
    <string name="no_data_available">No matching routes</string>
    <string name="populate">Please populate all fields</string>

    <!-- offer fragments strings -->
    <string name="be_a_buddy_exclamation">Be a Cycle Buddy!</string>
    <string name="find_a_buddy">Find a Cycle Buddy!</string>
    <string name="find_button">Find a Buddy</string>
    <string name="search_blurb">Find yourself a Cycle Buddy by searching for offered routes below:</string>
    <string name="offer_blurb">Become a Cycle Buddy by offering your company on a ride</string>
    <string name="offer_from">Leaving from:</string>
    <string name="offer_to">Going to:</string>
    <string name="offer_time_taken">Estimated time taken (mins):</string>
    <string name="return_also">Return journey also offered?</string>
    <string name="example_from">e.g. Hackney</string>
    <string name="example_to">e.g. Farringdon</string>
    <string name="example_duration">e.g. 20</string>

    <!-- messages strings -->
    <string name="send">Send</string>
    <string name="type_here">Type here...</string>
    <string name="hey">Hey Buddy!</string>
    <string name="buddy_name">Buddy Name</string>
    <string name="received_message">received message</string>
    <string name="time_of_message">time of message</string>

    <string name="admob_initialise">ca-app-pub-7316772410290224~5085755047</string>
    <string name="admob_app_id_search">ca-app-pub-7316772410290224/5572021961</string>
    <string name="admob_app_id_offer">ca-app-pub-7316772410290224/3683460886</string>
    <string name="admob_app_id_save">ca-app-pub-7316772410290224/8061689598</string>

    <string name="ep_action_bar"><![CDATA[<font color=\'#FFFFFF\'> Edit Profile </font>]]></string>
    <string name="journey_time">Journey time:</string>
    <string name="mins">mins</string>
    <string name="vp_action_bar"><![CDATA[<font color=\'#FFFFFF\'> View Profile </font>]]></string>
    <string name="please_enter_a_short_bio">Please update your profile and enter a short bio</string>
    <string name="how_often_do_you_cycle">How often do you cycle?</string>
    <string name="how_long_have_you_been_cycling">How long have you been cycling?</string>
    <string name="buddy_or_in_need_of_a_buddy">Buddy or in need of a buddy?</string>
    <string name="your_name">Your name</string>
    <string name="no_current_conversations">No current conversations</string>

</resources>
