<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_ride"
        android:icon="@drawable/ic_bike_24px"
        android:title="@string/title_ride"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/title_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_offer"
        android:icon="@drawable/ic_smile_24px"
        android:title="@string/title_offer"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_24px"
        android:title="@string/title_messages"
        app:showAsAction="always"/>

</menu>