<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".EditProfileActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/edit_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginStart="@dimen/large_border"
                android:layout_marginTop="@dimen/large_border"
                android:layout_marginBottom="@dimen/large_border"
                android:padding="@dimen/medium_border"
                android:contentDescription="@string/edit_profile_cd"
                android:src="@drawable/ic_add_a_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/very_large_border"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="@dimen/more_than_large_text" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="wrap_content"
                    android:inputType="text"
                    android:maxLength="16"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_border"
            android:layout_marginTop="@dimen/large_border"
            android:text="@string/mini_bio"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bio_edit_text"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="150"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_border"
            android:layout_marginStart="@dimen/large_border"
            android:hint="@string/mini_bio_blurb"
            android:textSize="@dimen/large_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_border"
            android:layout_marginTop="@dimen/medium_border"
            android:text="@string/buddy_type"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_buddy_type"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/large_border"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_border"
            android:layout_marginTop="@dimen/medium_border"
            android:text="@string/how_long_cycling"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_years_of_cycling"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/large_border"
            android:spinnerMode="dropdown"
            android:textSize="@dimen/large_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_border"
            android:layout_marginTop="@dimen/medium_border"
            android:text="@string/how_often_cycling"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_cycling_frequency"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/large_border"
            android:spinnerMode="dropdown"
            android:textSize="@dimen/large_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_border"
            android:background="@drawable/normal_button"
            android:text="@string/save_button"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>
