<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RideFragment"
    android:background="@color/dark_grey"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_mikecyclebuddy2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:layout_marginTop="@dimen/medium_border"
        android:layout_marginBottom="@dimen/medium_border"
        android:layout_marginEnd="@dimen/large_border"
        android:layout_marginStart="@dimen/large_border"
        android:layout_gravity="center_horizontal"
        android:text="@string/cycle_buddy_blurb"
        android:textSize="@dimen/large_text"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

    <Button
        android:id="@+id/rf_search_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/medium_border"
        android:layout_marginBottom="@dimen/small_border"
        android:textColor="@color/white"
        style="@style/buttonStyle"
        android:background="@drawable/normal_button"
        android:text="@string/find_button"/>

    <Button
        android:id="@+id/rf_offer_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/small_border"
        android:layout_marginBottom="@dimen/medium_border"
        android:layout_marginLeft="@dimen/medium_border"
        android:textColor="@color/white"
        android:background="@drawable/normal_button"
        style="@style/buttonStyle"
        android:text="@string/offer" />

    </LinearLayout>

</LinearLayout>